<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/primary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:text="LifeLogs"
        android:textSize="50dp"
        android:textColor="#ffffffff"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/fname"
        android:textColor="#ffffffff"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"/>
    <EditText
        android:id="@+id/lname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:hint="@string/lname"
        android:textColor="#ffffffff"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:hint="@string/email"
        android:textColor="#ffffffff"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"/>
    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Create Account"
        android:textColor="#ffffffff"/>
</RelativeLayout>
